<resources>
    <string name="app_name">EA2 SOA</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repite Password</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_registrarse">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_comision" >Comisión</string>
    <string name="prompt_nombre" >Nombre</string>
    <string name="prompt_apellido" >Apellido</string>
    <string name="prompt_dni" >DNI</string>
    <string-array name="sensores_array">
        <item>Acelerómetro</item>
        <item>Sensor Luz</item>
    </string-array>
    <string name="enviroment">PROD</string>
</resources>
